gcc/testsuite/gdc.test/compilable/imports/testlambda1.d
module imports.testlambda1;

int bar() { return 7; }
