gcc/testsuite/gdc.test/fail_compilation/imports/b17625.d
module b17625;

private int boo() { return 45; }
